# NeoRAG

./: .gitignore  CITATION.cff  README.md  cli.py  config-example.toml  interactive-testing.py  pyproject.toml  requirements.txt  tmp.py
.github/workflows/: python-app.yml
configs/: demo.toml
rag/: config.py  evaluate.py  indexer.py  loader.py  retriever.py
scripts/: ci-local.sh
src/neorag/: auxiliary.py  build_corpus.py  cli.py  config.py  evaluate.py  generate.py  llm_client.py  loader.py  retriever.py
src/neorag/validate/: __init__.py  groundedness.py  refine.py  schema.py  shacl.py  structural.py  utils.py  violation.py
src/neorag/validate/shapes/: answer.ttl
tests/: conftest.py  test_core.py  test_eval.py  test_generate.py  test_llm_client.py  test_pipeline_e2e.py  test_refine.py  test_schema.py  test_settings.py  test_validate.py
tests/fixtures/: demo_test.json
